syntax = "proto3";

package greeter;

// 定义Greeter服务
service Greeter {
  // 定义Greeter中SayHello方法
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// 定义请求结构
message HelloRequest {
  string name = 1;
}

// 定义响应接口
message HelloReply {
  string message = 1;
}